--- a/account_financial_report/view/wizard.xml
+++ b/account_financial_report/view/wizard.xml
@@ -75,7 +75,7 @@
                         <field 
                             name="periods" 
                             nolabel="1" 
-                            domain="[('fiscalyear_id','=',fiscalyear),('special','=',False),('company_id','=',company_id)]"
+                            domain="[('fiscalyear_id','=',fiscalyear),('company_id','=',company_id)]"
                              attrs="{'readonly':[('columns','in',('qtr','thirteen'))],}">
                             <tree>
                                 <field name='code'/>
